--- a/index.html
+++ b/index.html
@@ -25,19 +25,29 @@
            HI! THERE I'M
         </p>
         <h1 class="name">
-           Muhayminul Nirnoy
-        </h1>
-            
-        <h2 class="">
-            Full-Stack Developer
-        </h3>
+          Muhayminul 
+           <br>
+           &nbsp; &nbsp; &nbsp; &nbsp; Nirnoy
+        </h1>  
+        <h2>
+            Full-Stack Developer _ _>
+        </h2>
         <p class="pra">
             I am an award-wining full-stack web developer and javascript specialist.
-            check out my articles, React and Native UL components at the code laboraty. Fell free to take a aliij at my latest projects on the web protfolio page. Remotely available UTC +6 
-            <a class="hire" href="linkedin.com/in/muhayminul-nirnoy/">
-                HIRE ME
-            </a>
+            check out my articles, React and Native UL components at the code laboraty. Fell free to take a look at my latest projects on the web protfolio page. Remotely available UTC +6.
         </p>
+        <a class="hire" href="" target="blank">
+            Projects
+        </a>
+        &nbsp;
+        <a class="hire" href="" target="blank">
+            Hire Me
+        </a>
+        &nbsp;
+        <a class="hire" href="" target="blank">
+            Contacts
+        </a>
+
         </div>
     
     </section>
