--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     
     </section>
 
+    <footer class="footer">
+        &copy;Copyright By Muhayminul Nirnoy
+    </footer>
 
 </body>
 </html>
